--- a/Changes
+++ b/Changes
@@ -116,6 +116,11 @@
     And so, the test suite now tests that a routine call dies to pass a bad
     input test rather than checking that it returns undef.
 
+    * Updated the test suite to account for the following breaking changes
+    introduced in Locale::KeyedText version 1.06_4:  Changed how Text
+    Templates work such that variable names to be interpolated must now
+    appear inside "<>" instead of "{}".
+
     * Locale::KeyedText is now licensed under the terms of the GNU Lesser
     General Public License (LGPL) version 3 or later, rather than version
     2.1+ of the same license.  The text of the updated license is now in
