--- a/Changes
+++ b/Changes
@@ -138,6 +138,9 @@
     2.1+ of the same license.  The text of the updated license is now in
     the 2 files LICENSE/LGPL and LICENSE/GPL rather than 1 file "LGPL".
 
+    * The LICENSE AND COPYRIGHT now names Muldis Data Systems as the owner
+    rather than Darren Duncan; in practice there is no difference however.
+
     * Update AUTHOR emails from perl@ to darren@.
 
     * Rewrote most of the Makefile.PL (and META.yml) to make its format
