--- a/lib/Locale/KeyedText.pod
+++ b/lib/Locale/KeyedText.pod
@@ -688,18 +688,16 @@ Darren Duncan (C<darren@DarrenDuncan.net>)
 
 =head1 LICENSE AND COPYRIGHT
 
-Locale::KeyedText is Copyright © 2003-2016, Muldis Data Systems, Inc.
+Locale::KeyedText is Copyright © 2003-2019, Muldis Data Systems, Inc.
 
-L<http://www.muldis.com/>
+L<https://muldis.com>
 
 Locale::KeyedText is free software; you can redistribute it and/or modify
-it under the terms of the GNU Lesser General Public License (LGPL) as
-published by the Free Software Foundation (L<http://www.fsf.org/>); either
-version 3 of the License, or (at your option) any later version.  You
-should have received a copy of the LGPL as part of the Locale::KeyedText
-distribution, in the files named "LICENSE/LGPL" and "LICENSE/GPL" (the
-LGPLv3 is defined as the terms of the GPLv3 plus extra permissions); if
-not, see L<http://www.gnu.org/licenses/>.
+it under the terms of the Artistic License version 2 (AL2) as published by
+the Perl Foundation (L<https://www.perlfoundation.org>).  You should have
+received a copy of the AL2 as part of the Locale::KeyedText distribution,
+in the file named "LICENSE/artistic-2_0.txt"; if not, see
+L<https://www.perlfoundation.org/artistic-license-20.html>.
 
 Any versions of Locale::KeyedText that you modify and distribute must carry
 prominent notices stating that you changed the files and the date of any
