Lowered Locale::KeyedText dependency to Perl 5.8.0 from 5.8.1

--- a/lib/Locale/KeyedText.pod
+++ b/lib/Locale/KeyedText.pod
@@ -660,10 +660,10 @@ I<This documentation is pending.>
 
 =head1 DEPENDENCIES
 
-This file requires any version of Perl 5.x.y that is at least 5.8.1.
+This file requires any version of Perl 5.x.y that is at least 5.8.0.
 
 It also requires these Perl 5 packages that are available only bundled with
-Perl 5.8.1+ and on CPAN: L<overload-ver(1.01..*)|overload>.
+Perl 5.8.0+: L<overload-ver(1.00..*)|overload>.
 
 It also requires these Perl 5 packages that are available both bundled with
 Perl 5.8.1+ and on CPAN: L<Scalar::Util-ver(1.13..*)|Scalar::Util>.
