--- a/Changes
+++ b/Changes
@@ -7,6 +7,22 @@
     * Locale::KeyedText version 2.1.1 for Perl 5 is released on CPAN as
     Locale-KeyedText-2.1.1.tar.gz.
 
+    * Lowered the declared minimum Perl version dependency to 5.8.0 (2002)
+    from 5.8.1 (2003) since the prior .1 requirement seemed rather
+    arbitrary and all 5.8.z and newer should suffice.
+
+    * The declared minimum version dependencies for some Perl-bundled
+    modules were lowered to those shipped with 5.8.0 from those with 5.8.1:
+    ExtUtils::MakeMaker is now 6.03 from 6.17,
+    "overload" is now 1.00 from 1.01.
+
+    * As long as your Perl is version 5.8.1 (2003) or newer, each of the
+    Locale::KeyedText classes requires only the Perl core and core modules
+    to run, and nothing else, so usage is trivially easy. If your Perl is
+    instead version 5.8.0 (2002), you need only also install the 1
+    dual-life CPAN module Scalar::Util version 1.13+; 1.09 is the actual
+    minimum dependency, but 1.13 matches what was bundled with Perl 5.8.1.
+
     * Locale::KeyedText is now released under the terms of the Artistic
     License version 2 rather than the GNU Lesser General Public License
     (LGPL) version 3+.
